add features and fixing locations

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="particles-js"></div>
-  <h1 id="title">Memeriksa Lokasi...</h1>
+  <h1 id="title">Selamat Datang di Presensi Kehadiran Panitia Gebyar Ramadhan</h1>
   <p id="message">Harap tunggu sementara lokasi Anda diperiksa.</p>
   <p id="alert"></p>
   <div id="form-container"></div>
@@ -18,5 +18,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./src/js/particles.js-master/particles.js-master/particles.js"></script>
   <script src="./src/js/particles.js-master/particles.js-master/demo/js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/noumanqamar450/alertbox@main/version/1.0.2/alertbox.min.js"></script>
 </body>
 </html>
